sidebar fixes opacity and spacing

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -26,5 +26,6 @@ $menu-font-size: 21px;
 $subtitle-font-size: 24px; // ALL CAPS
 $title-font-size: 36px;
 $page-title-size: 24px;
+$navbar-font-size: 18px;
 
 $footer-font-size: 9px;
